# Resume-Projects

./: README.md
Hockey-Player-Statistics/: CS 221 Program Four.cpp  CS 221 Program Four.sln  CS 221 Program Four.vcxproj  CS 221 Program Four.vcxproj.filters  Player.cpp  Player.h  Playerlist.cpp  Playerlist.h  out.txt  sample.txt
LINK-Bot/: global.gitignore  main.py  pyproject.toml  readme.md  tarkov.py
RaidVoice/: .gitignore  README.md  main.py
